# IR_bot

./: .gitignore  Dockerfile  README.md  UPDATES.md  course_id.json  course_result.json  data.py  gspread_sheet.json  hello.py  insane_scores.csv  ir_bot.py  lr2_users.json  main.py  pyproject.toml  requirements.txt  test.ipynb
src/: common.py  generate_table.py  lr2ir.py  mypage.py  result.py  web_server.py
